--- a/react/src/components/Search.css
+++ b/react/src/components/Search.css
@@ -18,13 +18,11 @@
     align-items: center;
     margin-top: 20px;
     width: 100%;
-    z-index: 10;
 }
 
 .basic-multi-select {
     margin-bottom: 10px;
     width: 50%;
-    z-index: inherit;
 }
 
 .results-container {
